--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build:sass": "node-sass -r --output-style compressed scss/main.scss -o ./public/css",
-    "watch:sass": "npm run build:sass && npm run build:sass -- -w"
+    "watch:sass": "npm run build:sass && npm run build:sass -- -w",
+    "server": "json-server -p3001 --watch db.json"
   },
   "author": "YOURNAMEHERE <USERNAME@kink.com>",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "node": ">=8"
   },
   "devDependencies": {
-    "eslint-config-kink": "https://github.com/Kink-Com/eslint-config-kink.git"
+    "eslint-config-kink": "https://github.com/Kink-Com/eslint-config-kink.git",
+    "json-server": "^0.16.2"
   }
 }
